hdi dia del agente

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>Cocina Demo</title>
+    <title>HDI Día del agente</title>
 
     <!-- Fav Icon -->
     <link rel="icon" href="assets/images/icon-fa.png" type="image/x-icon">
