--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <div class="feature-block-one wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="inner-box">
                                     <div class="image-box">
-                                        <model-viewer class="altura" alt="Volvo" src="assets/models/HDITracking-Editables05b-RA.gltf" src="assets/models/usdz/hdi1.usdc" ar ar-modes="webxr scene-viewer quick-look" poster="assets/img/preview.jpg" seamless-poster shadow-intensity="1" camera-controls camera-orbit="90deg" enable-pan>
+                                        <model-viewer class="altura" alt="Volvo" src="assets/models/HDITracking-Editables05b-RA.gltf" src="assets/models/usdz/HDITracking-Editables05b-RA.usdz" ar ar-modes="webxr scene-viewer quick-look" poster="assets/img/preview.jpg" seamless-poster shadow-intensity="1" camera-controls camera-orbit="90deg" enable-pan>
 
                                             <button slot="ar-button" class="button-5">
                                                 CLIC PARA VER EN TAMAÑO REAL
